effective periodic task, even the server restart, the periodic task is still avaiable

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,7 +21,7 @@ linters:
   disable-all: true
   enable:
     #    - bodyclose
-    - deadcode
+#    - deadcode
     - depguard
     - dogsled
     #    - dupl
