--- a/config/test.env
+++ b/config/test.env
@@ -9,3 +9,4 @@ REDIS_WRITE_TIMEOUT=16
 REDIS_CONNECT_TIMEOUT=16
 REDIS_NORMAL_TASKS_POLL_PERIOD=900
 REDIS_DELAYED_TASKS_POLL_PERIOD=600
+DEFAULT_SEND_CONCURRENCY=100
